# code-review-agent

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml  语法笔记.md
docs/: agents-design.md  dev-bug-dives.md  dev-issues.md  dev-log.md  graph-design.md  models-design.md  requirements.md  state-design.md
scripts/: run.py
src/: config.py  models.py
src/graph/: builder.py  nodes.py  state.py
tests/bugfix/: README.md  bug-tracker.md  full_suite_01_smoke.py  full_suite_02_security.py  full_suite_03_fix_score.py  full_suite_04_failure_hitl.py  full_suite_05_aggregate.py
tests/bugfix/b00/: fix-log.md
tests/bugfix/b01/: fix-log.md  test_b01_01_sql_injection.py  test_b01_02_perf_duplicate.py  test_b01_03_style.py  test_b01_04_mixed.py  test_b01_05_clean.py
tests/bugfix/b02/: fix-log.md  test_b02_01_style.py  test_b02_02_file_ops.py  test_b02_03_dataprocess.py  test_b02_04_mixed.py  test_b02_05_clean.py  test_b02_06_sql_mixed.py  test_b02_07_command_mixed.py  test_b02_08_credentials_mixed.py
tests/bugfix/b03/: fix-log.md  test_b03_01_score_formula.py  test_b03_02_multi_issue.py  test_b03_03_failure_penalty.py  test_b03_04_low_score.py  test_b03_05_clean.py
tests/bugfix/b04/: fix-log.md  test_b04_01_no_hitl_on_failure.py  test_b04_02_routing_branches.py  test_b04_03_e2e_failure_path.py  test_b04_04_e2e_accept_failure.py  test_b04_05_e2e_human_feedback.py
tests/bugfix/b05/: fix-log.md  test_b05_01_warning_as_error.py
tests/optimization/performance_reviewer/: opt_perf_01_smoke.py  opt_perf_02_detect.py  opt_perf_03_noise.py  opt_perf_04_severity.py  (+2 more)
(+6 files in other folders)
